--- a/welcome/index.html
+++ b/welcome/index.html
@@ -102,7 +102,7 @@
                     <div class="collapse navbar-collapse" id="navbar-collapse-groups">
                         <ul class="nav navbar-nav">
                             <li><a href="http://my.phirobot.com/index.html">
-                                <h1>AICROBO</h1>
+                                <h1>AICRobotics</h1>
                             </a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
@@ -127,7 +127,7 @@
 
 <h3>声明：</h3>
 <ul class="simple">
-  <li>2013年，Ubuntu for ROS诞生于南京大学人工智能实验室LAMDA研究所，由负责智能机器人系统架构与开发的Yuanbo She设计制作完成。</li>
+  <li>2013年，Ubuntu for ROS诞生于南京大学计算机软件新技术国家重点实验室机器学习与数据挖掘研究组（LAMDA），由负责智能机器人系统架构与开发的佘元博（Yuanbo She）同学设计制作完成。</li>
   <li>设计制作Ubuntu for ROS的初衷，是节约ROS开发团队的开发环境部署时间。</li>
   <li>2014年1月30日，作为ExBot网上机器人兴趣小组的创始人之一，Yuanbo She以ExBot小组的名义通过ExBot机器人社区（http://blog.exbot.net/archives/702）对外发布分享Ubuntu for ROS，并编写初级使用教程，让广大ROS爱好者受益。</li>
   <li>2014年5月20日，发布完520版本后，Ubuntu for ROS的维护工作停止，其他版本以及其他团队的类似定制版Ubuntu与本ROS技术团队无关。</li>
@@ -148,11 +148,11 @@
 </ul>
 
 <p>
-现在本ROS技术团队从南京大学人工智能实验室LAMDA组走出来，全职推进相关工作进程，愿同各位智能机器人爱好者一起走得更远！
+佘元博（Yuanbo She）已从南大LAMDA研究组毕业，得到LAMDA的授权组建了本ROS技术团队，全职推进相关工作进程，愿同各位智能机器人爱好者一起走得更远！
 </p>
 
 <p>
-Email: aicrobo@163.com
+Email: yuanboshe@126.com
 </p>
 
 <h3>获得更多信息，请F5刷新本页面...</h3>
