--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Yuanbo She's Blog">
     <meta name="author" content="Yuanbo She">
-    <title>404 Error | Yuanbo She</title>
+    <title>404 Error | AICRobotics</title>
     <meta name="google-site-verification" content="0mXr6Pg187Q4q6NgNglcunnBiVqqS1L4yKV6loUWYkY"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -102,7 +102,7 @@
                     <div class="collapse navbar-collapse" id="navbar-collapse-groups">
                         <ul class="nav navbar-nav">
                             <li><a href="http://aicrobo.github.io/index.html">
-                                <h1>Yuanbo She</h1>
+                                <h1>AICRobotics</h1>
                             </a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
