--- a/welcome/index.html
+++ b/welcome/index.html
@@ -45,6 +45,9 @@
                     <li >
                         <a href="http://aicrobo.github.io/blog/index.html">Blog </a>
                     </li>
+                    <li >
+                        <a href="http://aicrobo.github.io/ubuntu_for_ros.html">Ubuntu for ROS </a>
+                    </li>
                 </ul>
                 <p class="navbar-text"><i class="fa fa-ellipsis-v fa-lg"></i></p>
                 <!-- sub nav items -->
@@ -59,12 +62,6 @@
                             <a href="http://aicrobo.github.io/blog/category/machine-learning.html">
                                 <i class="fa fa-folder fa-lg"></i>
                                 Machine Learning
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://aicrobo.github.io/blog/category/others.html">
-                                <i class="fa fa-folder fa-lg"></i>
-                                Others
                             </a>
                         </li>
                         <li>
