--- a/ubuntu_for_ros.html
+++ b/ubuntu_for_ros.html
@@ -235,7 +235,7 @@ Copyright 2014 by ExBot
 <script type="text/javascript">
     var uyan_config = {
         'du': 'my.phirobot.com',
-        'su': ''
+        'su': 'ubuntu_for_ros.html'
     };
 </script>
 <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1803538"></script>
