--- a/ubuntu_for_ros.html
+++ b/ubuntu_for_ros.html
@@ -120,6 +120,54 @@
 <!-- MAIN -->
 <div class="container" id="ybs-main">
 
+<h2>Ubuntu for ROS</h2>
+<ul>
+	<li>如果是Windows用户，请安装虚拟机，如VMWare，笔者使用的是 VMWare Workstation 10.0.4，然后参考《<a title="10分钟安装ROS（Windows + 虚拟机）" href="http://aicrobo.github.io/blog/2014-03-install_ros_in_10mins_vm.html" target="_blank">10分钟安装ROS（Windows + 虚拟机）</a>》教程进行安装。</li>
+	<li>如果是Ubuntu用户，在裸机中安装，请参考《<a title="10分钟安装ROS（U盘/CD刻录盘 + 裸机）" href="http://aicrobo.github.io/blog/2014-03-install_ros_in_10mins_pc.html" target="_blank">10分钟安装ROS（U盘/CD刻录盘 + 裸机）</a>》。</li>
+</ul>
+
+<div class='col-md-6'>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i>基础版(Ubuntu 14.04 + Indigo)</h3>
+        </div>
+        <div class="panel-body">
+            <h4>64位</h4>
+            <ul class="simple">
+                <li><p><strong>UROS1404I64BASE_aicrobo_150714 [<a href="http://pan.baidu.com/s/1eQIY8Ye" target="_blank">下载iso</a>]</strong></p>
+                <p>MD5 [46366f2d412c1c2090bdf1783fff6d19]</p></li>
+            </ul>
+            <hr/>
+            <h4>32位</h4>
+            <ul class="simple">
+                <li><p><strong>UROS1404I32BASE_aicrobo_150714 [<a href="http://pan.baidu.com/s/1sjn4j7n" target="_blank">下载iso</a>]</strong></p>
+                <p>MD5 [c9b34c14997718eae31d1938188554d3]</p></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class='col-md-6'>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i>开发版(Ubuntu 14.04 + Indigo)</h3>
+        </div>
+        <div class="panel-body">
+            <h4>64位</h4>
+            <ul class="simple">
+                <li><p><strong>UROS1404I64DEV_aicrobo_150715 [<a href="http://pan.baidu.com/s/1jGjE918" target="_blank">下载iso</a>]</strong></p>
+                <p>MD5 [8e4a47fbb80c54cb1d4b0b094dac7947]</p></li>
+            </ul>
+            <hr/>
+            <h4>32位</h4>
+            <ul class="simple">
+                <li><p><strong>UROS1404I32DEV_aicrobo_150715 [<a href="http://pan.baidu.com/s/1bnuImCJ" target="_blank">下载iso</a>]</strong></p>
+                <p>MD5 [fe5f62cc1684879b06c88bcd7a564ff8]</p></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
 <h2>关于Ubuntu for ROS</h2>
 
 <div class='col-md-12'>
@@ -163,54 +211,6 @@
             <ul class="simple">
                 <li>Ubuntu系统的定制打包很简单，但内容功能的优化与完善需要倾注制作者的经验和心血。而Ubuntu for ROS的发布与推广让一些商业化团队看到商机，伸手党之余还各种信息叨扰让制作者不甚其烦，没底线地进行商业忽悠也让作者感到厌恶。</li>
                 <li>团队成员对外分享经验、答疑解难，但很多劳动被商业化团队无偿利用，内部商定就此封笔停止对外分享。团队外的使用者遇到疑问常常得到错误的回答，被误导导致Ubuntu for ROS名声受损，也使团队感到烦闷。</li>
-            </ul>
-        </div>
-    </div>
-</div>
-
-<h2>安装方法与下载地址</h2>
-<ul>
-	<li>如果是Windows用户，请安装虚拟机，如VMWare，笔者使用的是 VMWare Workstation 10.0.4，然后参考《<a title="10分钟安装ROS（Windows + 虚拟机）" href="http://aicrobo.github.io/blog/2014-03-install_ros_in_10mins_vm.html" target="_blank">10分钟安装ROS（Windows + 虚拟机）</a>》教程进行安装。</li>
-	<li>如果是Ubuntu用户，在裸机中安装，请参考《<a title="10分钟安装ROS（U盘/CD刻录盘 + 裸机）" href="http://aicrobo.github.io/blog/2014-03-install_ros_in_10mins_pc.html" target="_blank">10分钟安装ROS（U盘/CD刻录盘 + 裸机）</a>》。</li>
-</ul>
-
-<div class='col-md-6'>
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i>基础版(Ubuntu 14.04 + Indigo)</h3>
-        </div>
-        <div class="panel-body">
-            <h4>64位</h4>
-            <ul class="simple">
-                <li><p><strong>UROS1404I64BASE_aicrobo_150714 [<a href="http://pan.baidu.com/s/1eQIY8Ye" target="_blank">下载iso</a>]</strong></p>
-                <p>MD5 [46366f2d412c1c2090bdf1783fff6d19]</p></li>
-            </ul>
-            <hr/>
-            <h4>32位</h4>
-            <ul class="simple">
-                <li><p><strong>UROS1404I32BASE_aicrobo_150714 [<a href="http://pan.baidu.com/s/1sjn4j7n" target="_blank">下载iso</a>]</strong></p>
-                <p>MD5 [c9b34c14997718eae31d1938188554d3]</p></li>
-            </ul>
-        </div>
-    </div>
-</div>
-
-<div class='col-md-6'>
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title"><i class="glyphicon glyphicon-th-list"></i>开发版(Ubuntu 14.04 + Indigo)</h3>
-        </div>
-        <div class="panel-body">
-            <h4>64位</h4>
-            <ul class="simple">
-                <li><p><strong>UROS1404I64DEV_aicrobo_150715 [<a href="http://pan.baidu.com/s/1jGjE918" target="_blank">下载iso</a>]</strong></p>
-                <p>MD5 [8e4a47fbb80c54cb1d4b0b094dac7947]</p></li>
-            </ul>
-            <hr/>
-            <h4>32位</h4>
-            <ul class="simple">
-                <li><p><strong>UROS1404I32DEV_aicrobo_150715 [<a href="http://pan.baidu.com/s/1bnuImCJ" target="_blank">下载iso</a>]</strong></p>
-                <p>MD5 [fe5f62cc1684879b06c88bcd7a564ff8]</p></li>
             </ul>
         </div>
     </div>
