--- a/ubuntu_for_ros.html
+++ b/ubuntu_for_ros.html
@@ -124,6 +124,7 @@
 <ul>
 	<li>如果是Windows用户，请安装虚拟机，如VMWare，笔者使用的是 VMWare Workstation 10.0.4，然后参考《<a title="10分钟安装ROS（Windows + 虚拟机）" href="http://aicrobo.github.io/blog/2014-03-install_ros_in_10mins_vm.html" target="_blank">10分钟安装ROS（Windows + 虚拟机）</a>》教程进行安装。</li>
 	<li>如果是Ubuntu用户，在裸机中安装，请参考《<a title="10分钟安装ROS（U盘/CD刻录盘 + 裸机）" href="http://aicrobo.github.io/blog/2014-03-install_ros_in_10mins_pc.html" target="_blank">10分钟安装ROS（U盘/CD刻录盘 + 裸机）</a>》。</li>
+    <li><span style="color: #aa0000;"><strong>华东师范大学智能机器人运动与视觉实验室主办2015中国ROS Summer School，请使用“开发版”Ubuntu for ROS</strong></span></li>
 </ul>
 
 <div class='col-md-6'>
