--- a/welcome/index.html
+++ b/welcome/index.html
@@ -99,7 +99,7 @@
                     <div class="collapse navbar-collapse" id="navbar-collapse-groups">
                         <ul class="nav navbar-nav">
                             <li><a href="http://aicrobo.github.io/index.html">
-                                <h1>AICRobotics</h1>
+                                <h1><img src="http://aicrobo.github.io/theme/img/logo_horiz.png" alt="logo">AICRobotics</h1>
                             </a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
