--- a/welcome/index.html
+++ b/welcome/index.html
@@ -84,7 +84,7 @@
     <nav class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <div class="row">
-                <div class='col-md-9'>
+                <div class='col-md-11'>
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-groups">
@@ -99,7 +99,7 @@
                     <div class="collapse navbar-collapse" id="navbar-collapse-groups">
                         <ul class="nav navbar-nav">
                             <li><a href="http://aicrobo.github.io/index.html">
-                                <h1><img src="http://aicrobo.github.io/theme/img/logo_horiz.png" alt="logo">AICRobotics</h1>
+                                <h1><img src="http://aicrobo.github.io/theme/img/logo_horiz.png" alt="logo"></h1>
                             </a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
