--- a/404.html
+++ b/404.html
@@ -84,7 +84,7 @@
     <nav class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <div class="row">
-                <div class='col-md-11'>
+                <div class='col-md-6'>
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-groups">
@@ -102,14 +102,48 @@
                                 <h1><img src="http://aicrobo.github.io/theme/img/logo_horiz.png" alt="logo"></h1>
                             </a></li>
                         </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="http://lamda.nju.edu.cn">
-                                <img src="http://aicrobo.github.io/theme/img/lamda.png" alt="Lamda Lab"></a></li>
-                            <li><a href="http://www.nju.edu.cn/">
-                                <img src="http://aicrobo.github.io/theme/img/nju.png" alt="Nanjing University"></a></li>
-                        </ul>
+                        
                     </div>
                     <!-- /.navbar-collapse -->
+                </div>
+                <div class='col-md-4'>
+                    <div class="row">
+                        <div class='col-md-12'>
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><a href="http://lamda.nju.edu.cn">
+                                    <img src="http://aicrobo.github.io/theme/img/lamda.png" alt="Lamda Lab"></a></li>
+                                <li><a href="http://www.nju.edu.cn/">
+                                    <img src="http://aicrobo.github.io/theme/img/nju.png" alt="Nanjing University"></a></li>
+                                <li>
+                                <div class=""></div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class='col-md-12'>
+                            <!-- JiaThis Button BEGIN -->
+                            <div class="jiathis_style_32x32">
+                            <a class="jiathis_button_weixin"></a>
+                            <a class="jiathis_button_cqq"></a>
+                            <a class="jiathis_button_tsina"></a>
+                            <a class="jiathis_button_ydnote"></a>
+                            <a class="jiathis_button_renren"></a>
+                            <a class="jiathis_button_evernote"></a>
+                            <a href="http://www.jiathis.com/share?uid=1803538" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"></a>
+                            <a class="jiathis_counter_style"></a>
+                            </div>
+                            <script type="text/javascript" >
+                            var jiathis_config={
+                                data_track_clickback:true,
+                                sm:"tqq,tieba,douban,fb,googleplus,qingbiji",
+                                summary:"",
+                                shortUrl:false,
+                                hideMore:false
+                            }
+                            </script>
+                            <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js?uid=1803538" charset="utf-8"></script>
+                            <!-- JiaThis Button END -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
