--- a/about.html
+++ b/about.html
@@ -53,6 +53,12 @@
                 <!-- sub nav items -->
                 <ul class="nav navbar-nav">
                         <li>
+                            <a href="http://aicrobo.github.io/blog/category/coding.html">
+                                <i class="fa fa-folder fa-lg"></i>
+                                Coding
+                            </a>
+                        </li>
+                        <li>
                             <a href="http://aicrobo.github.io/blog/category/cv.html">
                                 <i class="fa fa-folder fa-lg"></i>
                                 CV
@@ -68,12 +74,6 @@
                             <a href="http://aicrobo.github.io/blog/category/ros.html">
                                 <i class="fa fa-folder fa-lg"></i>
                                 ROS
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://aicrobo.github.io/blog/category/webqian-duan-code.html">
-                                <i class="fa fa-folder fa-lg"></i>
-                                WEB前端&Code
                             </a>
                         </li>
                 </ul>
@@ -102,7 +102,6 @@
                                 <h1><img src="http://aicrobo.github.io/theme/img/logo_horiz.png" alt="logo"></h1>
                             </a></li>
                         </ul>
-                        
                     </div>
                     <!-- /.navbar-collapse -->
                 </div>
