--- a/welcome/index.html
+++ b/welcome/index.html
@@ -1,222 +1,8 @@
 ﻿<!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="description" content="Yuanbo She's Blog">
-    <meta name="author" content="Yuanbo She">
-    <title>About Ubuntu for ROS | AICRobotics</title>
-    <meta name="google-site-verification" content="0mXr6Pg187Q4q6NgNglcunnBiVqqS1L4yKV6loUWYkY"/>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://aicrobo.github.io/theme/css/style.css">
-    <link rel="stylesheet" href="http://fonts.useso.com/css?family=Yanone+Kaffeesatz:400,300">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="http://cdn.bootcss.com/html5shiv/3.7.0/html5shiv.min.js"></script>
-        <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-
-    <link rel="shortcut icon" href="http://aicrobo.github.io/theme/img/favicon.ico" type="image/x-icon">
+    <meta http-equiv="refresh" content="0;url=http://aicrobo.github.io/ubuntu_for_ros.html">
 </head>
-
-<body lang="zh">
-<header>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-nav">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="http://aicrobo.github.io/index.html">Navigation</a>
-            </div>
-
-            <div class="collapse navbar-collapse" id="navbar-collapse-nav">
-                <!-- main nav bar -->
-                <ul class="nav navbar-nav">
-                    <li >
-                        <a href="http://aicrobo.github.io/blog/index.html">Blog </a>
-                    </li>
-                    <li >
-                        <a href="http://aicrobo.github.io/ubuntu_for_ros.html">Ubuntu for ROS </a>
-                    </li>
-                </ul>
-                <p class="navbar-text"><i class="fa fa-ellipsis-v fa-lg"></i></p>
-                <!-- sub nav items -->
-                <ul class="nav navbar-nav">
-                        <li>
-                            <a href="http://aicrobo.github.io/blog/category/coding.html">
-                                <i class="fa fa-folder fa-lg"></i>
-                                Coding
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://aicrobo.github.io/blog/category/cv.html">
-                                <i class="fa fa-folder fa-lg"></i>
-                                CV
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://aicrobo.github.io/blog/category/machine-learning.html">
-                                <i class="fa fa-folder fa-lg"></i>
-                                Machine Learning
-                            </a>
-                        </li>
-                        <li>
-                            <a href="http://aicrobo.github.io/blog/category/ros.html">
-                                <i class="fa fa-folder fa-lg"></i>
-                                ROS
-                            </a>
-                        </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-    </nav>
-    <nav class="navbar navbar-inverse" role="navigation">
-        <div class="container">
-            <div class="row">
-                <div class='col-md-6'>
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-groups">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="navbar-collapse-groups">
-                        <ul class="nav navbar-nav">
-                            <li><a href="http://aicrobo.github.io/index.html">
-                                <h1><img src="http://aicrobo.github.io/theme/img/logo_horiz.png" alt="logo"></h1>
-                            </a></li>
-                        </ul>
-                    </div>
-                    <!-- /.navbar-collapse -->
-                </div>
-                <div class='col-md-4'>
-                    <div class="row">
-                        <div class='col-md-12'>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a href="http://lamda.nju.edu.cn">
-                                    <img src="http://aicrobo.github.io/theme/img/lamda.png" alt="Lamda Lab"></a></li>
-                                <li><a href="http://www.nju.edu.cn/">
-                                    <img src="http://aicrobo.github.io/theme/img/nju.png" alt="Nanjing University"></a></li>
-                                <li>
-                                <div class=""></div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class='col-md-12'>
-                            <!-- JiaThis Button BEGIN -->
-                            <div class="jiathis_style_32x32">
-                            <a class="jiathis_button_weixin"></a>
-                            <a class="jiathis_button_cqq"></a>
-                            <a class="jiathis_button_tsina"></a>
-                            <a class="jiathis_button_ydnote"></a>
-                            <a class="jiathis_button_renren"></a>
-                            <a class="jiathis_button_evernote"></a>
-                            <a href="http://www.jiathis.com/share?uid=1803538" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"></a>
-                            <a class="jiathis_counter_style"></a>
-                            </div>
-                            <script type="text/javascript" >
-                            var jiathis_config={
-                                data_track_clickback:true,
-                                sm:"tqq,tieba,douban,fb,googleplus,qingbiji",
-                                summary:"",
-                                shortUrl:false,
-                                hideMore:false
-                            }
-                            </script>
-                            <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js?uid=1803538" charset="utf-8"></script>
-                            <!-- JiaThis Button END -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <div id="ybs-bar-hearder-botom"></div>
-</header>
-
-<!-- MAIN -->
-<div class="container" id="ybs-main">
-
-<h2>关于Ubuntu for ROS</h2>
-
-<h3>声明：</h3>
-<ul class="simple">
-  <li>2013年，Ubuntu for ROS诞生于南京大学计算机软件新技术国家重点实验室机器学习与数据挖掘研究组（LAMDA），由负责智能机器人系统架构与开发的佘元博（Yuanbo She）同学设计制作完成。</li>
-  <li>设计制作Ubuntu for ROS的初衷，是节约ROS开发团队的开发环境部署时间。</li>
-  <li>2014年1月30日，作为ExBot网上机器人兴趣小组的创始人之一，Yuanbo She以ExBot小组的名义通过ExBot机器人社区（http://blog.exbot.net/archives/702）对外发布分享Ubuntu for ROS，并编写初级使用教程，让广大ROS爱好者受益。</li>
-  <li>2014年5月20日，发布完520版本后，Ubuntu for ROS的维护工作停止，其他版本以及其他团队的类似定制版Ubuntu与本ROS技术团队无关。</li>
-  <li>2015年7月，设计制作Ubuntu for ROS的原班人马正式全职，重新为大家维护ROS定制版Ubuntu iso，并推出更完善的使用教程。</li>
-</ul>
-
-<h3>说明：</h3>
-
-<p>Ubuntu for ROS是一款基于ROS开发的定制版Ubuntu系统，按照常规的方式部署和配置ROS学习与开发环境需要有经验的开发者花费数小时甚至一两天（网络不好的情况下）完成，而使用Ubuntu for ROS对于一个完全没有经验的开发者来说，也只需要10分钟即可开始进行ROS学习与开发。</p>
-
-<p>
-2014年6月，团队停止Ubuntu for ROS的维护工作原因有以下几点：
-</p>
-
-<ul class="simple">
-	<li>Ubuntu系统的定制打包很简单，但内容功能的优化与完善需要倾注制作者的经验和心血。而Ubuntu for ROS的发布与推广让一些商业化团队看到商机，伸手党之余还各种信息叨扰让制作者不甚其烦，没底线地进行商业忽悠也让作者感到厌恶。</li>
-	<li>团队成员对外分享经验、答疑解难，但很多劳动被商业化团队无偿利用，内部商定就此封笔停止对外分享。团队外的使用者遇到疑问常常得到错误的回答，被误导导致Ubuntu for ROS名声受损，也使团队感到烦闷。</li>
-</ul>
-
-<p>
-佘元博（Yuanbo She）已从南大LAMDA研究组毕业，得到LAMDA的授权组建了本ROS技术团队，全职推进相关工作进程，愿同各位智能机器人爱好者一起走得更远！
-</p>
-
-<p>
-Email: yuanboshe@126.com
-</p>
-
-<h3>获得更多信息，请F5刷新本页面...</h3>
-
-</div>
-<!-- ENDS MAIN -->
-
-<footer>
-    <div class="container">
-        <div>
-            <p>Copyright 2014 by Yuanbo She</p>
-            <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5866946'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/stat.php%3Fid%3D5866946%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
-            Powered by Pelican ...
-        </div>
-    </div>
-</footer>
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-36220570-3', 'phirobot.com');
-  ga('send', 'pageview');
-
-</script>
-
-<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdPic":"","bdStyle":"0","bdSize":"16"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
-
+<body>
 </body>
 </html>
