--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="http://aicrobo.github.io/theme/css/style.css">
+    <link rel="stylesheet" href="http://www.aicrobo.com/theme/css/style.css">
     <link rel="stylesheet" href="http://fonts.useso.com/css?family=Yanone+Kaffeesatz:400,300">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -21,7 +21,7 @@
         <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="shortcut icon" href="http://aicrobo.github.io/theme/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="http://www.aicrobo.com/theme/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body lang="zh">
@@ -36,42 +36,42 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://aicrobo.github.io/index.html">Navigation</a>
+                <a class="navbar-brand" href="http://www.aicrobo.com/index.html">Navigation</a>
             </div>
 
             <div class="collapse navbar-collapse" id="navbar-collapse-nav">
                 <!-- main nav bar -->
                 <ul class="nav navbar-nav">
                     <li >
-                        <a href="http://aicrobo.github.io/blog/index.html">Blog </a>
+                        <a href="http://www.aicrobo.com/blog/index.html">Blog </a>
                     </li>
                     <li >
-                        <a href="http://aicrobo.github.io/ubuntu_for_ros.html">Ubuntu for ROS </a>
+                        <a href="http://www.aicrobo.com/ubuntu_for_ros.html">Ubuntu for ROS </a>
                     </li>
                 </ul>
                 <p class="navbar-text"><i class="fa fa-ellipsis-v fa-lg"></i></p>
                 <!-- sub nav items -->
                 <ul class="nav navbar-nav">
                         <li>
-                            <a href="http://aicrobo.github.io/blog/category/coding.html">
+                            <a href="http://www.aicrobo.com/blog/category/coding.html">
                                 <i class="fa fa-folder fa-lg"></i>
                                 Coding
                             </a>
                         </li>
                         <li>
-                            <a href="http://aicrobo.github.io/blog/category/cv.html">
+                            <a href="http://www.aicrobo.com/blog/category/cv.html">
                                 <i class="fa fa-folder fa-lg"></i>
                                 CV
                             </a>
                         </li>
                         <li>
-                            <a href="http://aicrobo.github.io/blog/category/machine-learning.html">
+                            <a href="http://www.aicrobo.com/blog/category/machine-learning.html">
                                 <i class="fa fa-folder fa-lg"></i>
                                 Machine Learning
                             </a>
                         </li>
                         <li>
-                            <a href="http://aicrobo.github.io/blog/category/ros.html">
+                            <a href="http://www.aicrobo.com/blog/category/ros.html">
                                 <i class="fa fa-folder fa-lg"></i>
                                 ROS
                             </a>
@@ -98,8 +98,8 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="navbar-collapse-groups">
                         <ul class="nav navbar-nav">
-                            <li><a href="http://aicrobo.github.io/index.html">
-                                <h1><img src="http://aicrobo.github.io/theme/img/logo_horiz.png" alt="logo"></h1>
+                            <li><a href="http://www.aicrobo.com/index.html">
+                                <h1><img src="http://www.aicrobo.com/theme/img/logo_horiz.png" alt="logo"></h1>
                             </a></li>
                         </ul>
                     </div>
@@ -110,9 +110,9 @@
                         <div class='col-md-12'>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="http://lamda.nju.edu.cn">
-                                    <img src="http://aicrobo.github.io/theme/img/lamda.png" alt="Lamda Lab"></a></li>
+                                    <img src="http://www.aicrobo.com/theme/img/lamda.png" alt="Lamda Lab"></a></li>
                                 <li><a href="http://www.nju.edu.cn/">
-                                    <img src="http://aicrobo.github.io/theme/img/nju.png" alt="Nanjing University"></a></li>
+                                    <img src="http://www.aicrobo.com/theme/img/nju.png" alt="Nanjing University"></a></li>
                                 <li>
                                 <div class=""></div>
                                 </li>
@@ -159,7 +159,7 @@
 <br/>
 很崇拜pi robot，牛人，从那里学到了很多东西！
 <br/>
-所以phirobot，就成了最合适的个人站点域名的理由了，http://aicrobo.github.io将作为个人博客的永久域名！
+所以phirobot，就成了最合适的个人站点域名的理由了，http://www.aicrobo.com将作为个人博客的永久域名！
 </p>
 <p>
 Email: yuanboshe@126.com
