update with new engine

--- a/404.html
+++ b/404.html
@@ -30,13 +30,13 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-nav">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-nav" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://www.aicrobo.com/index.html">Navigation</a>
+                <a class="navbar-brand" href="http://www.aicrobo.com/index.html">Home</a>
             </div>
 
             <div class="collapse navbar-collapse" id="navbar-collapse-nav">
@@ -48,10 +48,7 @@
                     <li >
                         <a href="http://www.aicrobo.com/ubuntu_for_ros.html">Ubuntu for ROS </a>
                     </li>
-                </ul>
-                <p class="navbar-text"><i class="fa fa-ellipsis-v fa-lg"></i></p>
-                <!-- sub nav items -->
-                <ul class="nav navbar-nav">
+
                         <li>
                             <a href="http://www.aicrobo.com/blog/category/coding.html">
                                 <i class="fa fa-folder fa-lg"></i>
@@ -77,73 +74,64 @@
                             </a>
                         </li>
                 </ul>
+					<input type="text" class="navbar-text st-default-search-input" placeholder="Search">
+					
+<script type="text/javascript">
+  (function(w,d,t,u,n,s,e){w['SwiftypeObject']=n;w[n]=w[n]||function(){
+  (w[n].q=w[n].q||[]).push(arguments);};s=d.createElement(t);
+  e=d.getElementsByTagName(t)[0];s.async=1;s.src=u;e.parentNode.insertBefore(s,e);
+  })(window,document,'script','//s.swiftypecdn.com/install/v2/st.js','_st');
+
+  _st('install','5afzKpc6bAw-BArCqNc4','2.0.0');
+</script>
+
             </div>
             <!-- /.navbar-collapse -->
         </div>
     </nav>
     <nav class="navbar navbar-inverse" role="navigation">
         <div class="container">
-            <div class="row">
-                <div class='col-md-6'>
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-groups">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="navbar-collapse-groups">
-                        <ul class="nav navbar-nav">
-                            <li><a href="http://www.aicrobo.com/index.html">
-                                <h1><img src="http://www.aicrobo.com/theme/img/logo_horiz.png" alt="logo"></h1>
-                            </a></li>
-                        </ul>
-                    </div>
-                    <!-- /.navbar-collapse -->
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-groups">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+            <div class="row collapse navbar-collapse" id="navbar-collapse-groups">
+            <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class='navbar-left'>
+					<a href="http://www.aicrobo.com/index.html">
+						<h1><img src="http://www.aicrobo.com/theme/img/logo_horiz.png" alt="logo"></h1>
+					</a>
                 </div>
-                <div class='col-md-4'>
-                    <div class="row">
-                        <div class='col-md-12'>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a href="http://lamda.nju.edu.cn">
-                                    <img src="http://www.aicrobo.com/theme/img/lamda.png" alt="Lamda Lab"></a></li>
-                                <li><a href="http://www.nju.edu.cn/">
-                                    <img src="http://www.aicrobo.com/theme/img/nju.png" alt="Nanjing University"></a></li>
-                                <li>
-                                <div class=""></div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class='col-md-12'>
-                            <!-- JiaThis Button BEGIN -->
-                            <div class="jiathis_style_32x32">
-                            <a class="jiathis_button_weixin"></a>
-                            <a class="jiathis_button_cqq"></a>
-                            <a class="jiathis_button_tsina"></a>
-                            <a class="jiathis_button_ydnote"></a>
-                            <a class="jiathis_button_renren"></a>
-                            <a class="jiathis_button_evernote"></a>
-                            <a href="http://www.jiathis.com/share?uid=1803538" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"></a>
-                            <a class="jiathis_counter_style"></a>
-                            </div>
-                            <script type="text/javascript" >
-                            var jiathis_config={
-                                data_track_clickback:true,
-                                sm:"tqq,tieba,douban,fb,googleplus,qingbiji",
-                                summary:"",
-                                shortUrl:false,
-                                hideMore:false
-                            }
-                            </script>
-                            <script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js?uid=1803538" charset="utf-8"></script>
-                            <!-- JiaThis Button END -->
-                        </div>
-                    </div>
+                <div class='navbar-right'>
+					<!-- JiaThis Button BEGIN -->
+					<div class="jiathis_style_32x32">
+					<a class="jiathis_button_weixin"></a>
+					<a class="jiathis_button_cqq"></a>
+					<a class="jiathis_button_tsina"></a>
+					<a class="jiathis_button_ydnote"></a>
+					<a class="jiathis_button_renren"></a>
+					<a class="jiathis_button_evernote"></a>
+					<a href="http://www.jiathis.com/share?uid=1803538" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"></a>
+					<a class="jiathis_counter_style"></a>
+					</div>
+					<script type="text/javascript" >
+					var jiathis_config={
+						data_track_clickback:true,
+						sm:"tqq,tieba,douban,fb,googleplus,qingbiji",
+						summary:"",
+						shortUrl:false,
+						hideMore:false
+					}
+					</script>
+					<script type="text/javascript" src="http://v3.jiathis.com/code_mini/jia.js?uid=1803538" charset="utf-8"></script>
+					<!-- JiaThis Button END -->
                 </div>
+			<!-- /.navbar-collapse -->
             </div>
         </div>
     </nav>
@@ -165,7 +153,7 @@
 <footer>
     <div class="container">
         <div>
-            <p>Copyright 2014 by Yuanbo She</p>
+            <p><i class="glyphicon glyphicon-copyright-mark"></i> 2013-2015 by Yuanbo She</p>
             <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5866946'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/stat.php%3Fid%3D5866946%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
             Powered by Pelican ...
         </div>
