--- a/ubuntu_for_ros.html
+++ b/ubuntu_for_ros.html
@@ -238,18 +238,16 @@
     </div>
 </div>
 
-		
 <!-- UY BEGIN -->
 <div id="uyan_frame"></div>
 <script type="text/javascript">
 	var uyan_config = {
-		'du': 'yuanboshe.github.io',
-		'su': '{{ output_file }}'
+ 'du': 'yuanboshe.github.io', 		
+		'su': 'ubuntu_for_ros.html'
 	};
 </script>
 <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=1803538"></script>
 <!-- UY END -->
-
 
 </div>
 <!-- ENDS MAIN -->
