--- a/404.html
+++ b/404.html
@@ -152,11 +152,37 @@
 
 <footer>
     <div class="container">
-        <div>
-            <p><i class="glyphicon glyphicon-copyright-mark"></i> 2013-2015 by Yuanbo She</p>
-            <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5866946'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/stat.php%3Fid%3D5866946%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
-            Powered by Pelican ...
-        </div>
+		<div class="row">
+			<div class="col-md-4">
+				<h4>联系我们：</h4>
+				<ul>
+					<li>jobs@aicrobo.com (工作)‍</li>
+					<li>service@aicrobo.com‍‍ (咨询)</li>
+					<li>sales@aicrobo.com‍‍ (销售)</li>
+				</ul>
+			</div>
+			<div class="col-md-4">
+				<h4>合作单位：</h4>
+				<ul>
+					<li><a href='http://www.robotics.sei.ecnu.edu.cn/ros2015/'>智能机器人运动与视觉实验室（ROS Summer School 中国承办单位）</a></li>
+					<li>ROS QQ群：<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=af956e6243884579a434c993242d66de08609b538d53f0264ea71881df85f78d"><img border="0" src="http://pub.idqqimg.com/wpa/images/group.png" alt="ROS Summer School 2015" title="ROS Summer School 2015"></a></li>
+				</ul>
+			</div>
+			<div class="col-md-4">
+				<h4>开发者博客：</h4>
+				<ul>
+					<li><a href="http://my.phirobot.com/blog/index.html">http://my.phirobot.com/blog/index.html</a></li>
+					<li><a href="http://roboturing.com/blog/index.html">http://roboturing.com/blog/index.html</a></li>
+					<li><a href="http://www.cnblogs.com/freedomshe">http://www.cnblogs.com/freedomshe</a></li>
+				</ul>
+			</div>
+		</div>
+		
+		<hr/>
+	
+		<p><i class="glyphicon glyphicon-copyright-mark"></i> 2013-2015 AICRobotics</p>
+		<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5866946'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s22.cnzz.com/stat.php%3Fid%3D5866946%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+		Powered by Pelican ...
     </div>
 </footer>
 
