--- a/education.html
+++ b/education.html
@@ -229,6 +229,24 @@
 			<img class="c-image image_JrvUYh2" src="http://www.aicrobo.com/theme/files/2d3f68e762662832f5690f3fca55666c.png"/>
 		</div>
 	</div>
+	<div class="container c-container container_6Ea7NXYEWU">
+		<h1 class="c-heading heading_TIOJFH">
+			开发者DEMO视频
+		</h1>
+		<div class="c-div div_70RD3K">
+			<iframe src="https://player.vimeo.com/video/150218723" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<p>2013年 视觉自主避障算法实验</p>
+			<hr />
+			<iframe src="https://player.vimeo.com/video/150218722" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<p>2013年 语音控制、视觉跟随、视觉避障实验</p>
+			<hr />
+			<iframe src="https://player.vimeo.com/video/150231367" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<p>2014年 自然人机交互、自主导航实验</p>
+			<hr />
+			<iframe src="https://player.vimeo.com/video/150218721" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<p>2015年 立体视觉算法开发环境搭建和视觉控制实验</p>
+		</div>
+	</div>
 </div>
 <div class="container-fluid c-section section_1bF7se">
 </div>
