--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
 									公司业务
 								</h1>
 								<p class="paragraph_R11Hso">
-									定制智能机器人操作系统
+									开发智能机器人操作系统
 									<br/>
-									定制机器人智能化解决方案
+									提供机器人智能化解决方案
 									<br/>
 									定制智能移动机器人硬件平台
 									<br/>
@@ -412,7 +412,7 @@
 		<div class="c-div div_mwPbXh">
 			<img class="c-image image_jMKS7Y" src="http://www.aicrobo.com/theme/files/51a399cf5c69e9501d31b1d131a92013.png"/>
 			<h1 class="c-heading heading_MXGs3r">
-				分享我们的成果
+				我们的动态
 			</h1>
 		</div>
 	</div>
@@ -424,11 +424,11 @@
 						<img class="c-image image_oZX41t" src="http://www.aicrobo.com/theme/files/a225f3fab9bdf1fc57d7f4ad39889aa3.jpg"/>
 					</div>
 					<div class="c-div div_1s80IB">
-						<a class="c-textlink textlink_nwxX6l" href="http://www.aicrobo.com/blog/">
-							BLOG 干货
+						<a class="c-textlink textlink_nwxX6l" href="http://www.aicrobo.com/news.html">
+							NEWS
 						</a>
 						<p class="paragraph_Q9XqJS">
-							爱啃萝卜会不定期更新博客，为智能机器人爱好者提供技术帮助。
+							关于我们的最新消息。
 						</p>
 					</div>
 				</div>
@@ -441,11 +441,11 @@
 						<img class="c-image image_Ttk1hB" src="http://www.aicrobo.com/theme/files/256b41e63dae26712fd5571195e62398.jpg"/>
 					</div>
 					<div class="c-div div_bM9CHv">
-						<a class="c-textlink textlink_nwxX6l" href="http://www.aicrobo.com/videos.html">
-							DEMO 录像
+						<a class="c-textlink textlink_nwxX6l" href="http://www.aicrobo.com/blog/">
+							BLOG
 						</a>
 						<p class="paragraph_oiqKg9">
-							爱啃萝卜会适时发布以往DEMO录像或客户允许公布的视频，欢迎粉丝和爱好者提出建议。
+							爱啃萝卜团队会不定期更新博客，分享部分经验，为智能机器人爱好者提供学习帮助。
 						</p>
 					</div>
 				</div>
