--- a/news.html
+++ b/news.html
@@ -131,9 +131,6 @@
 				<a class="btn c-button button_dwFjz9" href="http://www.aicrobo.com/news.html" type="button">
 					新闻动态
 				</a>
-				<a class="btn c-button button_dwFjz9" href="http://www.aicrobo.com/videos.html" type="button">
-					官方视频
-				</a>
 				<a class="btn c-button button_dwFjz9" href="http://www.aicrobo.com/lives.html" type="button">
 					办公生活
 				</a>
@@ -201,7 +198,7 @@
 								</p>
 							</div>
 							<div class="paragraph_oba5AE">
-								<p>新站点上线，AICRobo开启招聘模式！</p>
+								<p>新站点上线，AICRobo经历了三年磨练，开启招募模式，广纳英杰！</p>
 
 							</div>
 						</div>
