--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
 			▶2014年1月，团队正式推出教育分享版算法研发环境，命名为Ubuntu for ROS，并分享自己的移动机器人研发平台，命名为XI。
 			<br/>
 			<br/>
-			▶2014年3月，团队成立公司，正式对外提供智能机器人开发业务，与多家机器人研发机构和高校实验室建立合伙关系，线下积累了良好的口碑，团队继续低调积累与发展。
+			▶2014年3月，团队成立公司，正式对外提供智能机器人开发业务，与多家机器人研发机构和高校实验室建立合作伙伴关系，线下积累了良好的口碑，团队继续低调积累与发展。
 			<br/>
 			<br/>
 			▶2015年6月，团队携手华东师范大学智能机器人运动与视觉实验室，协办中国首届ROS Summer School活动，首次正式露面。
