--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 									公司成绩
 								</h1>
 								<p class="paragraph_uh4oUa">
-									通过销售智能机器人产品和承接项目已经和全国13个省23个城市的23所高校和多家机器人研究机构建立了合作伙伴关系
+									通过项目业务已经和全国13个省23个城市的23所高校和多家机器人研究机构建立了合作伙伴关系
 								</p>
 							</div>
 							<div class="c-div div_doscX2" data-c_e_id="div_65b790d8e634ce167085bedb2d5a5a51">
