--- a/ubuntu_for_ros.html
+++ b/ubuntu_for_ros.html
@@ -110,7 +110,7 @@
 
 	<!-- MAIN -->
 <div class="container-fluid c-section section_3egbpywzlbBKNR" data-c_tl_id="M_4096039ed3a9299c">
-<div class="container c-container container_NTlCsu">
+<div class="container c-container container_ubtforros">
 <h2>Ubuntu for ROS</h2>
 <ul>
 	<li>如果是Windows用户，请安装虚拟机，如VMWare，笔者使用的是 VMWare Workstation 10.0.4，然后参考《<a title="10分钟安装ROS（Windows + 虚拟机）2015-07-19更新" href="http://aicrobo.github.io/blog/2015-07-install_ros_in_10mins_vm_new.html" target="_blank">10分钟安装ROS（Windows + 虚拟机）2015-07-19更新</a>》教程进行安装。</li>
